# assetmanagement

./: .gitignore  README.md  financial_report.md  investment_recommendation.md  pyproject.toml  report.md  requirements.txt  technical_report.md
.devcontainer/: devcontainer.json
reports/: financial_report.md  investment_recommendation.md  investment_recommendation_kr.md  macro_report.md  technical_report.md
src/assetmanagement/: crew.py  emoji.py  main.py
src/assetmanagement/config/: agents.yaml  tasks.yaml
src/assetmanagement/job_description/: macro_strategist.md
src/assetmanagement/tools/: custom_tool.py  report_to_json_tool.py
src/ui/: about.py  app.py  financial_report.md  home.py  investment_recommendation.md  investment_recommendation_kr.md  macro_report.md  my_records.py  requirements.txt  technical_report.md
src/ui/config/: authentication.yaml
src/ui/pages/: 1_my_records.py
src/ui/reports/: financial_report.md  investment_recommendation.md  investment_recommendation_kr.md  macro_report.md  technical_report.md
