[project]
name = "assetmanagement"
version = "0.1.0"
description = "assetManagement using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
assetmanagement = "assetmanagement.main:run"
run_crew = "assetmanagement.main:run"
train = "assetmanagement.main:train"
replay = "assetmanagement.main:replay"
test = "assetmanagement.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
